@@ -1,4 +1,4 @@
-MD5 2085e2ec68cbd6b6fe094b0f3d8a2111 libdts-0.0.2.ebuild 932
+MD5 a980da6347b5a7309523af66558ca058 libdts-0.0.2.ebuild 930
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 e8506fa9977d161dea885f6104c8d775 ChangeLog 658
+MD5 f442bdc2de75a4defd680654f5356012 ChangeLog 760
 MD5 9d1c5f06b01f4cc5b729407e44de4078 files/digest-libdts-0.0.2 64
