@@ -1,6 +1,6 @@
+MD5 5cc63847ca9f0f6fe2337097e2ab0a5a libjackasyn-0.10.ebuild 785
 MD5 be2fc8ba2525088efd38f3d37d601255 libjackasyn-0.8.ebuild 911
-MD5 f1961d95c5da37cdea2e60e8ee59bc95 libjackasyn-0.10.ebuild 784
-MD5 05abb353dab8e3fc23a02d6e22dd40ba ChangeLog 1043
 MD5 527dcfe3ce0f0b53c6b6aa8b82eb930c metadata.xml 252
-MD5 1f38c0c1e629135027a5d3d9f9dea2d3 files/digest-libjackasyn-0.8 66
+MD5 6f3e5d9dad62abc4b1c0e0f2a7512ec5 ChangeLog 1146
 MD5 2a4ada362fa3e0aeab0ba7a5eb0787df files/digest-libjackasyn-0.10 67
+MD5 1f38c0c1e629135027a5d3d9f9dea2d3 files/digest-libjackasyn-0.8 66
