@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/libdsp
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libdsp/ChangeLog,v 1.2 2004/08/19 23:01:08 chriswhite Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libdsp/ChangeLog,v 1.3 2004/09/01 17:09:51 eradicator Exp $
+
+  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  libdsp-4.9.2-r1.ebuild:
+  Stable x86. Added -amd64, -sparc.
 
 *libdsp-4.9.2-r1 (20 Aug 2004)
 
